# instashare-backend-django

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
apis/: models.py  serializers.py  urls.py  views.py
apis/migrations/: 0001_initial.py
djangobackend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
files/: admin.py  constants.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_alter_uploadedfile_file.py  0003_rename_original_name_uploadedfile_name_and_more.py  0004_alter_uploadedfile_status.py
